fix button container text alignment

--- a/foundations/block-and-inline/02-margin-and-padding-2/style.css
+++ b/foundations/block-and-inline/02-margin-and-padding-2/style.css
@@ -26,6 +26,7 @@ body {
 .button-container {
   background: #e3f4ff;
   padding: 10px;
+  text-align: center;
 }
 
 button {
